# cavallinlatin

./: .gitignore  README.md  cavallinlatin-1-00.terese  cavallinlatin-1-01.terese  cavallinlatin-1-02.terese  cavallinlatin-1-03.terese  cavallinlatin-1-04.terese  cavallinlatin-1-05.terese  cavallinlatin-1-06.terese  cavallinlatin-1-07.terese  cavallinlatin-1-08.terese  cavallinlatin-1-09.terese  cavallinlatin-1-10.terese  cavallinlatin-1-11.terese  cavallinlatin-2-00.terese  cavallinlatin-2-01.terese  cavallinlatin-2-02.terese  cavallinlatin-2-03.terese  cavallinlatin-2-04.terese  cavallinlatin-2-05.terese  cavallinlatin-2-06.terese  cavallinlatin-2-07.terese  cavallinlatin-2-08.terese  cavallinlatin-2-09.terese  cavallinlatin-2-10.terese  cavallinlatin-2-11.terese  cavallinlatin-2-12.terese  cavallinlatin-2-13.terese  cavallinlatin-2-14.terese  compile.py
columns/: cavlat-1-0001.tiff  cavlat-1-0002.tiff  cavlat-1-0003.tiff  cavlat-1-0004.tiff  cavlat-1-0005.tiff  cavlat-1-0006.tiff  cavlat-1-0007.tiff  (+2601 more)
terese/: AUTHORS  Makefile.am  README  configure.ac
terese/src/: Makefile.am  aliases-dialog.cc  aliases-dialog.h  box-tree-view.cc  box-tree-view.h  box.cc  box.h  class-tree-view.cc  class-tree-view.h  clusterer.cc  clusterer.h  common.h  custom-drawing-area.cc  custom-drawing-area.h  font-box.cc  font-box.h  font.cc  font.h  image.cc  image.h  main.cc  matrix.h  page-tree-view.cc  page-tree-view.h  page.cc  page.h  project.cc  project.h  style-tree-view.cc  style-tree-view.h  terese.cc  terese.h  terese.ui  type-box.cc  type-box.h  unigram.cc  unigram.h
(+46 files in other folders)
